example-1/1-allowed-registries.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: "allowed-registries"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups:   ["apps"]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["deployments"]
  validations:
    - expression: >
        object.spec.template.spec.containers.all(c,
          ["cgr.dev", "mycompany.com"].exists(i, c.image.startsWith(i))
        )
      message: "Forbidden image registry"
